# cellular-automata

./: .gitignore  cells.cabal  cellular-automata.cabal  cellular-automata.nix  concept.org  default.nix  shell.nix  universe-stacking.org
src/Cellular/: Chessboard.hs  Common.hs  ConwayCell.hs  Sidewalk.hs  SimpleCell.hs  SimpleCell2D.hs
src/Data/: Cells.hs  Cellular.hs  Genes.hs
src/Data/Cells/: Cells.hs  Directions.hs  Types.hs  Universes.hs
src/Data/Cells/Cells/: SimpleCell.hs
src/Data/Cells/Universes/: Sidewalk.hs
src/Data/Cellular/: Automaton.hs  Cells.hs  Classes.hs  Direction.hs  Directions.hs  Types.hs  UStack.hs  Universe.hs  Universes.hs
src/Data/Cellular/Automaton/: Conway.hs
src/Data/Cellular/Cells/: SimpleCell.hs
src/Data/Cellular/Common/: Chessboard.hs  ConwayCell.hs  Sidewalk.hs  SimpleCell.hs  SimpleCell2D.hs
src/Data/Cellular/Universe/: Chessboard.hs  Sidewalk.hs
src/Data/Cellular/Universes/: Sidewalk.hs
src/Data/Monoid/: Extractor.hs
tests/: Main.hs
