name:                cellular-automata
version:             0.0.0.0
synopsis:            generic types for cellular automata experiments
license:             GPL-3
license-file:        LICENSE
author:              RoboNickBot
maintainer:          nicklewchenko92@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Cellular
  
  other-modules:       Data.Cellular.Classes
                     , Data.Cellular.UStack
  
  other-extensions:    MultiParamTypeClasses
                     , FunctionalDependencies

  build-depends:       base    >=4.8  && <4.9
                     , comonad >=4.2  && <4.3

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , comonad >=4.2 && <4.3
                     , cellular-automata